samples/_failures_safe/1761177953_17b295_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0491d5e7.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_0491d5e7.c:188:5: error: expected expression at end of input
  188 |     for (int i = 0; i < graph->vertices; i++)
      |     ^~~
./samples/SAFE/__tmp_0491d5e7.c:188:5: error: expected declaration or statement at end of input
